[package]
name = "superbot"
version = "0.13.0"
description = "An elegant Telegram bots framework for Rust"
edition = "2021"

[[bin]]
name = "stateless_chat"
path = "src/text_response.rs"

[[bin]]
name = "stateless_voice_chat"
path = "src/audio_response.rs"

[[bin]]
name = "stateful_chat"
path = "src/text_response_stateful.rs"

[dependencies]
teloxide = { version = "0.13", features = ["macros", "ctrlc_handler"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15"
genai = "0.1.16"
reqwest = "0.12.12"
serde_json = "1.0.134"
